--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Le Mans Ultimate Setup Generator</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
-    <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -32,6 +31,16 @@
                 <div id="trackComboboxList" class="combobox-list"></div>
             </div>
 
+            <div class="form-group">
+                <label for="carCategorySelect">Car Category:</label>
+                <select id="carCategorySelect" required>
+                    <option value="">--Select Car Category--</option>
+                    <option value="Hypercar">Hypercar</option>
+                    <option value="LMP2">LMP2</option>
+                    <option value="GT3">GT3</option>
+                    <option value="GTE">GTE</option>
+                    </select>
+            </div>
             <div class="form-group">
                 <label>Setup Type:</label>
                 <div class="button-group" id="setupTypeGroup">
@@ -67,7 +76,7 @@
                     <option value="wet">Wet</option>
                 </select>
             </div>
-            
+
             <div class="form-group">
                 <label for="specificRequest">Specific Request (Optional):</label>
                 <textarea id="specificRequest" rows="3" placeholder="e.g., good corner entry stability, oversteer high speed exit"></textarea>
